--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.64"
 web-sys = { version = "0.3.41", features = [ "console" ] }
+iced_web = "0.2.1"
