--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2.64"
 web-sys = { version = "0.3.41", features = [ "console" ] }
 iced_web = "0.2.1"
+iced = "0.1.1"
